frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@100;300;400&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components{
    .headerHover{
        @apply px-2 h-12 flex items-center border border-transparent hover:border-white duration-100 cursor-pointer
    }
    .productLi{
        @apply text-gray-600 hover:text-black text-sm font-medium border-b-[1px] border-b-gray-400
        hover:border-b-gray-700 flex flex-row items-center justify-end gap-3 hover:cursor-pointer duration-300 w-full 
    } 
}

.clicked {
    -webkit-box-shadow: 0 0 5px 3px rgb(135, 206, 235);
    border: 1px solid rgb(29, 177, 235);
  }

  .shadow-inner-bottom::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 30px; /* Adjust this value to control the height of the shadow */
    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(243, 239, 239));
    z-index: -1;
  }
  

